# yuki

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
include/yuki/: bitwise_enum.hpp  ct_str.hpp  defer.hpp  defines.hpp  fnv1a.hpp  hook_detour.hpp  hook_iat.hpp  input.hpp  mem.hpp  module.hpp  pointer.hpp  prot_flags.hpp  protect.hpp  scoped_seh.hpp  singleton.hpp  stba.hpp  str.hpp
libs/minhook/: gitcommit.txt
libs/minhook/src/: hook.c
src/: main.cpp  version.rc.in
